# chirality-semantic-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  VERSION.md  pyproject.toml
chirality/: __init__.py  cli.py  normative_spec.txt
chirality/core/: __init__.py  cell_resolver.py  context.py  matrices.py  operations.py  prompts.py  resolvers.py  tracer.py  types.py  validate.py
chirality/exporters/: working_memory_exporter.py
docs/: ALGORITHM.md  API_REFERENCE.md  NEO4J_QUERIES.md  NEO4J_SEMANTIC_INTEGRATION.md  PROMPT_ENGINEERING.md  THREE_STAGE_PIPELINE.md  TUTORIAL.md  WHY_CHIRALITY.md
scripts/: chirality
tests/: mocks.py
tests/core/: test_operations.py
traces/20250829-054914-b5e8ddeb/: C-20250829-054916.jsonl
